# ericsson-intern

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
projects/conformal-beam-prediction/: .env  .gitignore  CLAUDE.md  README.md  pyproject.toml  report.tex  run_cloud.sh  run_simulation.py  run_temporal.py
projects/conformal-beam-prediction/src/beampred/: beam_predictor.py  blockage.py  channel_model.py  codebook.py  complexity.py  config.py  conformal.py  dataset.py  deepmimo_channel.py  error_analysis.py  evaluate.py  temporal_dataset.py  temporal_predictor.py  train.py  visualize.py
projects/conformal-beam-prediction/tests/: test_adaptive_fallback.py  test_baselines.py  test_beam_predictor.py  test_blockage.py  test_channel_model.py  test_codebook.py  test_conformal.py  test_deepmimo_channel.py  test_exhaustive_search.py  test_sionna_channel.py  test_temporal_dataset.py
projects/conformal-handover/: .gitignore  CLAUDE.md  README.md  pyproject.toml  report.tex  run-irish-shift-experiment.py  run-paper-v6.py  run-shift-reliability-v6.py  run_experiment.py  run_full_experiment.py  run_irish_experiment.py  run_paper_experiments.py  run_paper_experiments_v2.py  run_paper_experiments_v3.py  run_paper_experiments_v4.py  run_paper_experiments_v5.py  run_paper_v7.py  run_shift_reliability_v7.py
projects/conformal-handover/figures/: irish-shift-results-v6.json  paper_results.json  paper_results_v2.json  paper_results_v3.json  paper_results_v4.json  paper_results_v5.json  related-work-matrix-v6.csv  repro-hash-before-v6.json  results.json  run-paper-v6-metadata.json  run-paper-v7-metadata.json  shift-results-v6.json  shift-results-v7.json
projects/conformal-handover/src/handover/: __init__.py  baseline.py  conformal.py  (+4 more)
projects/conformal-handover/tests/: test_shift_results_schema.py  test_shift_results_v7_schema.py  test_v7_controller.py
projects/diffusion-beam-prediction/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  references.bib  report.tex  run_baseline.py  run_cross_domain.py  run_cross_domain_aug.py  run_cross_domain_diffusion.py  run_cross_domain_diffusion_offline.py  run_diffusion_aug.py  run_experiments.py  run_finetune.py  run_gps_only.py  run_oracle.py  run_visualize.py  setup_data.py
projects/mmwave-beam-prediction/: .gitignore  CLAUDE.md  README.md  pyproject.toml  report.md  report.tex  run_cloud.sh  run_simulation.py
projects/mmwave-beam-prediction/tests/: test_complexity.py  test_conformal.py  test_dataset.py  test_error_analysis.py  test_evaluate.py  test_export_results.py  test_kpi.py  test_temporal_predictor.py  test_train.py  test_utils.py
(+24 files in other folders)
