[project]
name = "mmwave-beam-prediction"
version = "0.1.0"
description = "mmWave beam prediction with conformal prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=1.26",
    "scipy>=1.17.0",
    "torch>=2.10.0",
    "scikit-learn",
    "DeepMIMO @ git+https://github.com/DeepMIMO/DeepMIMO.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/beampred"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
