[project]
name = "mmwave-beam-prediction"
version = "0.1.0"
description = "mmWave beam prediction with conformal prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "numpy>=1.19.5,<2.3",
    "scipy",
    "torch",
    "scikit-learn",
    "DeepMIMO>=4.0.0b9",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/beampred"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
